--- a/index.html
+++ b/index.html
@@ -488,9 +488,105 @@
     <!--#region Modal -->
     <div class="backdrop" data-modal>
       <div class="modal">
-        <button class="modal-close-btn" type="button" data-modal-close>
-          close
+        <!-- Кнопка закриття -->
+        <button
+          class="modal-close-btn"
+          type="button"
+          data-modal-close
+          aria-label="Close"
+        >
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/modal-icons.svg#icon-close"></use>
+          </svg>
         </button>
+
+        <!-- Заголовок -->
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+
+        <!-- Форма -->
+        <form class="modal-form">
+          <!-- Name -->
+          <div class="field">
+            <label class="field-label" for="user-name">Name</label>
+            <div class="input-wrap">
+              <input
+                class="text-input"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/modal-icons.svg#icon-name"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- Phone -->
+          <div class="field">
+            <label class="field-label" for="user-phone">Phone</label>
+            <div class="input-wrap">
+              <input
+                class="text-input"
+                id="user-phone"
+                name="user-name"
+                type="text"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/modal-icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- Email -->
+          <div class="field">
+            <label class="field-label" for="user-email">Email</label>
+            <div class="input-wrap">
+              <input
+                class="text-input"
+                id="user-email"
+                name="user-name"
+                type="text"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/modal-icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- Comment -->
+          <div class="field-area">
+            <label class="field-label" for="user-comment">Comment</label>
+            <textarea
+              class="area-input"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <!-- Privacy -->
+          <div class="agree">
+            <input
+              class="visually-hidden"
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="agree-label" for="user-privacy">
+              <span class="checkbox-box">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#modal-icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="agree-link" href="#">Privacy Policy</a>
+            </label>
+          </div>
+
+          <!-- Submit -->
+          <button class="form-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <!-- #endregion -->
