--- a/index.html
+++ b/index.html
@@ -483,6 +483,27 @@
           </ul>
         </div>
       </div>
+      <!-- Subscribe new module -->
+      <div class="subscribe-container">
+        <p class="subscribe-text">Subscribe</p>
+        <form class="subscribe-form" action="#" method="post">
+          <label class="subscribe-label">
+            <input
+              class="subscribe-input"
+              type="email"
+              name="subscribe-email"
+              placeholder="E-mail"
+              required
+            />
+          </label>
+          <button class="subscribe-btn" type="submit">
+            Subscribe
+            <svg class="subscribe-icon" width="24" height="24">
+              <use href="./images/footer-icons.svg#icon-subscribe"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </footer>
     <!-- #endregion -->
     <!--#region Modal -->
